<resources>
    <string name="app_name">KyobeeWaitList</string>
    <string name="waitlist_app">Waitlist App</string>
    <string name="copyright">Copyright KYOBEE. All Rights Reserved - Version </string>
    <string name="username">Username</string>
    <string name="name">Name *</string>
    <string name="password">Password</string>
    <string name="remember">Keep me logged in</string>
    <string name="please_select_guset_mode">Please select guest mode:</string>

    <!--<string name="check_in">Guest Checkin Mode</string>-->
    <!-- 10-6-2017 change display only guest self checkin mode -->
    <string name="check_in">Guest Self Checkin Mode</string>
    <string name="display_in">Guest Display Mode</string>
    <string name="login">Login</string>
    <string name="login_text">By clicking the \'Login\' you stating that you have read and agreed to KYOBEE Waitlist Privacy &amp; Policy</string>
    <string name="please_wait">Please Wait..</string>
    <string name="no_internet">Your device is not connected to a network. Please check.</string>
    <string name="no">No</string>
    <string name="guest_name">Guest Name</string>
    <string name="status">Status</string>
    <string name="welcome">Welcome To</string>
    <string name="parties">Parties Waiting</string>
    <string name="now_serving">Now Serving</string>
    <string name="est_wait_time">Est.Wait Time</string>
    <string name="press_here">PRESS HERE TO CHECK-IN</string>
    <string name="add_new_guest">Add New Guest</string>

    <string name="hint_name">Name*</string>
    <string name="cell_phone">Cell Phone</string>
    <string name="or">OR</string>
    <!--<string name="hint_phone">(___)___-____*</string>-->
    <string name="hint_phone">(xxx)-xxx-xxxx*</string>
    <string name="email">E-Mail</string>
    <string name="hint_email">E-Mail*</string>
    <string name="people_party"># of people in your party*</string>

    <!--<string name="total_column"># of columns</string>
    <string name="total_row"># of rows per column</string>-->

    <string name="select_waitlist">Select waitlist type*</string>
    <string name="total_row_waitlist"># of rows per waitlist*</string>

    <string name="seating_preference">Seating Preference :</string>
    <string name="opt_in">Opt-in to receive promotions/specials</string>
    <string name="add_me_wait_list">ADD ME TO THE WAIT-LIST</string>


    <string name="thankyou">Thank you! Your customer number is:</string>
    <string name="applogize">We apologize for any inconvenience,but anyone not ready with their entire party will net be seated.</string>
    <string name="thankyou_understanding">Thank you for your understanding and cooperation!</string>
    <string name="ok">OK</string>

    <string name="please_select">Please select seating preference.</string>
    <string name="kyobee">Kyobee</string>
    <string name="kyobee_caps">KYOBEE</string>
    <string name="advantech">ADVANTECH</string>
    <string name="yes">YES</string>
    <string name="logout">Are you sure you want to logout?</string>

    <string name="approx_30_min">APPROX. 30 MIN. OR LESS</string>
    <string name="approx_60_min">APPROX. 60 MIN. OR LESS</string>
    <string name="approx_90_min">APPROX. 90 MIN. OR LESS</string>
    <string name="approx_120_min">APPROX. 120 MIN. OR LESS</string>

    <string name="not_present"> : Not Present</string>
    <string name="in_complete"> : Incomplete</string>
    <string name="no_guest_checked">There is no guest checked in yet for this period.</string>


     <string name="back">Go to back</string>
     <string name="refresh">Refresh</string>
     <string name="settings">Settings</string>

    <string name="column_first">First column name</string>
    <string name="column_second">Second column name</string>
    <string name="column_thired">Third column name</string>
    <string name="column_fourth">Fourth column name</string>

    <string name="option">Option</string>

    <string name="valid_phone">*VALID U.S. CELLUAR NUMBERS ONLY</string>
    <string name="poor_connection">Poor internet connection detected, Please try again.</string>

    <string name="not_present_status">Not Present</string>
    <string name="in_complete_status">Incomplete</string>
    <string name="show_party_number">Show Party #</string>



    <string name="adults">Adults:</string>
    <string name="childrens">Childrens:</string>
    <string name="infants">Infants:</string>

    <!-- checkin activity -->
    <string name="previous">PREVIOUS</string>
    <string name="next">NEXT</string>
    <string name="enter_name">Enter Your Name</string>
    <string name="enter_phone">Enter Your Phone Number</string>
    <string name="enter_1">+1</string>
    <string name="zero">0</string>

    <string name="adult">ADULTS</string>
    <string name="children">CHILDERN</string>
    <string name="infant">INFANTS</string>

    <string name="seating_pref">Seating Preference</string>

</resources>
