<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/popup_response_add_guest_blue"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/colorBlue"
              android:orientation="vertical"
              android:padding="2dp"
    >

    <LinearLayout
        android:id="@+id/linearPopup"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@android:color/white"
        >

        <com.kyobee.waitlist.customcontrol.CustomTextViewBold
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_margin="10dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/thankyou"
            android:textColor="@color/colorLightBrown"
            android:textSize="27sp"
            />

        <com.kyobee.waitlist.customcontrol.CustomTextViewBold
            android:id="@+id/txtNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:layout_gravity="center_horizontal"
            android:text="#315"
            android:textStyle="bold"
            android:textColor="@color/colorBlue"
            android:textSize="120sp"
            />

        <com.kyobee.waitlist.customcontrol.CustomTextViewBold
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            android:text="@string/applogize"
            android:textColor="@color/colorLightBrown"
            android:textSize="27sp"
            android:maxLines="2"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            />

        <com.kyobee.waitlist.customcontrol.CustomTextViewBold
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/thankyou_understanding"
            android:textColor="@android:color/black"
            android:textSize="32sp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            />


        <com.kyobee.waitlist.customcontrol.CustomButtonRegular
            android:id="@+id/btnOk"
            android:layout_width="250dp"
            android:layout_height="70dp"
            android:layout_gravity="center_horizontal"
            android:background="@color/colorBlue"
            android:text="@string/ok"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:textSize="40sp"
            android:layout_marginBottom="15dp"
            />

    </LinearLayout>

</LinearLayout>
