<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.kyobee.waitlist.activity.LoginActivity">

    <LinearLayout
        android:layout_width="400dp"
        android:layout_height="match_parent"
        android:layout_above="@+id/txtCopyRight"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:layout_marginTop="25dp"
        >

        <com.kyobee.waitlist.customcontrol.CustomTextViewUltralight
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/waitlist_app"
            android:textColor="@android:color/black"
            android:textSize="60sp"/>

        <com.kyobee.waitlist.customcontrol.CustomEditTextRegular
            android:id="@+id/edtUsername"
            android:layout_width="400dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:background="@drawable/correct_border"
            android:gravity="center_vertical"
            android:hint="@string/username"
            android:inputType="textEmailAddress"
            android:paddingLeft="15dp"
            android:textColor="@color/colorLightBrown"
            android:textColorHint="@color/colorLightBrown"
            android:textSize="26sp"
            />

        <com.kyobee.waitlist.customcontrol.CustomEditTextRegular
            android:id="@+id/edtPassword"
            android:layout_width="400dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:background="@drawable/correct_border"
            android:gravity="center_vertical"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingLeft="15dp"
            android:textColor="@color/colorLightBrown"
            android:textColorHint="@color/colorLightBrown"
            android:textSize="26sp"
            />

        <LinearLayout
            android:id="@+id/linearRemember"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="center"
            android:orientation="horizontal"
            >

            <RelativeLayout
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:gravity="center"
                android:layout_gravity="center_vertical"
                >
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imgCheckBox"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@color/colorLightBrown"
                    app:civ_border_color="@color/colorLightBrown"
                    app:civ_border_width="1dp"
                    />

                <com.hanks.library.AnimateCheckBox
                    android:id="@+id/chkRemember"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    app:animDuration="200"
                    app:checkedColor="#9e978e"
                    app:lineColor="#ffff"
                    app:lineWidth="1.5dp"
                    app:unCheckColor="#9e978e"/>

            </RelativeLayout>

            <com.kyobee.waitlist.customcontrol.CustomTextViewRegular
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remember"
                android:layout_gravity="center_vertical"
                android:textColor="@color/colorLightBrown"
                android:layout_marginLeft="10dp"
                android:textSize="23sp"/>

        </LinearLayout>

        <com.kyobee.waitlist.customcontrol.CustomTextViewBold
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_text"
            android:layout_gravity="center_vertical"
            android:textColor="@color/colorLightBrown"
            android:layout_marginLeft="50dp"
            android:gravity="center"
            android:textStyle="normal"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="25dp"
            android:textSize="12sp"/>

        <com.kyobee.waitlist.customcontrol.CustomButtonRegular
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/round_button_brown"
            android:text="@string/login"
            android:textSize="25sp"
            android:textColor="@android:color/white"
            android:textAllCaps="false"
            />

    </LinearLayout>

    <com.kyobee.waitlist.customcontrol.CustomTextViewRegular
        android:id="@+id/txtCopyRight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:textColor="@android:color/black"
        android:textSize="12sp"
        android:layout_marginBottom="10dp"
        />

</RelativeLayout>
