<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/pop_add_new_guest_"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
    >


    <RelativeLayout
        android:id="@+id/relativeTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorRed"
        >

        <com.kyobee.waitlist.customcontrol.CustomTextViewBold
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            android:gravity="center_vertical"
            android:text="@string/settings"
            android:textColor="@android:color/white"
            android:textSize="32sp"
            android:textStyle="bold"
            />

        <ImageView
            android:id="@+id/imgCancel"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_back"
            />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgCancel"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="@android:color/white"
                android:orientation="vertical"
                android:padding="15dp"
                >


                <com.piotrek.customspinner.CustomSpinner
                    android:id="@+id/spnrColumn"
                    style="@style/mySpinnerItemStyle"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/correct_border"/>

                <com.piotrek.customspinner.CustomSpinner
                    android:id="@+id/spnrRow"
                    style="@style/mySpinnerItemStyle"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/correct_border"/>

                <com.kyobee.waitlist.customcontrol.CustomEditTextRegular
                    android:id="@+id/edtColumn1"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/correct_border"
                    android:gravity="center_vertical"
                    android:hint="@string/column_first"
                    android:inputType="textPersonName"
                    android:paddingLeft="15dp"
                    android:textColor="@color/colorLightBrown"
                    android:textColorHint="@color/colorLightBrown"
                    android:textSize="26sp"
                    />

                <com.kyobee.waitlist.customcontrol.CustomEditTextRegular
                    android:id="@+id/edtColumn2"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/correct_border"
                    android:gravity="center_vertical"
                    android:hint="@string/column_second"
                    android:inputType="textPersonName"
                    android:paddingLeft="15dp"
                    android:textColor="@color/colorLightBrown"
                    android:textColorHint="@color/colorLightBrown"
                    android:textSize="26sp"
                    />

                <com.kyobee.waitlist.customcontrol.CustomEditTextRegular
                    android:id="@+id/edtColumn3"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/correct_border"
                    android:gravity="center_vertical"
                    android:hint="@string/column_thired"
                    android:inputType="textPersonName"
                    android:paddingLeft="15dp"
                    android:textColor="@color/colorLightBrown"
                    android:textColorHint="@color/colorLightBrown"
                    android:textSize="26sp"
                    />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="10dp"
                    android:gravity="center_vertical"
                    >

                    <LinearLayout
                        android:id="@+id/linearLeft"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        >

                        <com.kyobee.waitlist.customcontrol.CustomTextViewRegular
                            android:id="@+id/txtNotPresent"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/not_present_status"
                            android:textColor="@color/colorLightBrown"
                            android:textSize="26sp"
                            />


                        <android.support.v7.widget.SwitchCompat
                            android:id="@+id/switchNotPresent"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="10dp"
                            android:checked="false"
                            android:scaleX="1"
                            android:scaleY="1"
                            android:theme="@style/SCBSwitch"
                            />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/linearLeft"
                        android:layout_marginLeft="20dp"
                        >

                        <com.kyobee.waitlist.customcontrol.CustomTextViewRegular
                            android:id="@+id/txtIncomplete"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/in_complete_status"
                            android:textColor="@color/colorLightBrown"
                            android:textSize="26sp"
                            />


                        <android.support.v7.widget.SwitchCompat
                            android:id="@+id/switchIncomplete"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="10dp"
                            android:checked="false"
                            android:scaleX="1"
                            android:scaleY="1"
                            android:theme="@style/SCBSwitch"
                            />

                    </LinearLayout>

                </RelativeLayout>

                <com.kyobee.waitlist.customcontrol.CustomButtonRegular
                    android:id="@+id/btnOk"
                    android:layout_width="400dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="7dp"
                    android:background="@color/colorRed"
                    android:text="@string/ok"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="30sp"
                    />

            </LinearLayout>

        </ScrollView>
    </RelativeLayout>

</LinearLayout>
